# postechDNN

./: .gitignore  Contributing.md  LICENSE.txt  README  README.md  git_commit_logs.txt
Source/: DNN.sln
Source/DataStrcutures/DCEL/: Edge.cpp  Point.h  SimplePolygon.cpp  SimplePolygon.h
Source/Examples/spath_spolygon/: TNODE.h
Source/NearestNeighbor/WNNP/: WNNP.vcxproj  WNNP.vcxproj.filters  compressed_quadtree.h
UML/: Untitled.mdj
dnn/: DNN.sln  DNN.vcxproj  DNN.vcxproj.filters  LIST  Proceedings  README  UpgradeLog.htm  UpgradeLog2.htm  UpgradeLog3.htm  UpgradeLog4.htm  UpgradeLog6.htm  UpgradeLog7.htm  UpgradeLog8.htm  UpgradeLog9.htm
dnn/Algorithms/Aligning/: Aligning.pyproj
dnn/Algorithms/Cyclecenter/: center.h  center.py  visualization.py
dnn/Algorithms/ESP_plane/: CS.cpp  CS.h  ESP.vcxproj  Edge.cpp  Edge.h  Face.h  Graph.cpp  Graph.h  Point.cpp  Point.h  RP.cpp  RP.h  RectPoly.cpp  RectPoly.h  Square.cpp  basic.cpp  conforming_subdivision.cpp  conforming_subdivision.h  i_quad.cpp  i_quad.h  leftover.cpp  main.cpp
dnn/Algorithms/EdgesIntersection/: Edge.cpp  EdgesIntersection.cpp  EdgesIntersection.h  Graph.h  main.cpp
dnn/Algorithms/MaxDom/: MaxDom.cpp  MaxDom.h  P.cpp  P.h  Project1.vcxproj  Project1.vcxproj.filters  Q.cpp  Q.h  main.cpp
dnn/DataStrcutures/AVLTree/: AVLTree.h  AVLTree.md  AVLTree.vcxproj  README.md
dnn/DataStrcutures/BBST/: BBST.vcxproj  SimpleBBST.cpp
dnn/DataStrcutures/CarrierGraph/: carrier_graph.py
dnn/DataStrcutures/DCEL/: ConformingSubdivision.h  DCEL.cpp  DCEL.h  DCEL.md  DCEL.vcxproj  DCEL.vcxproj.filters  Edge.cpp  Edge.h  Makefile  Point.cpp  Point.h  PolygonalDomain.cpp  PolygonalDomain.h  README.md  SimplePolygon.cpp  SimplePolygon.h  Vector.cpp  Vector.h  Vector.md  metrics.h  (+1 more)
dnn/DataStructures/: Test_old.cpp
dnn/DataStructures/Delaunay_Linf/: CMakeCache.txt  CMakeLists.txt  Makefile  Point.cpp  Point.h  cmake_install.cmake  delaunay  delaunay.cpp  delaunay.h  geom2d.h  main.cpp  quadedge.cpp  quadedge.h  readme.md  test.cpp
dnn/Debug/: DCEL.ilk  FNNNE.ilk  HNN.ilk  L1NNS.ilk  SegL1Voronoi.ilk  WNNP.ilk
dnn/IPELET/: Readme.md  Readme_kr.md  readme.txt  readme_s.txt
dnn/NearestNeighbor/ENN/C_Subidivision/: APX_wavefront.cpp  APX_wavefront.h  CMakeCache.txt  CMakeLists.txt  CS_Free.cpp  CS_Free.h  CS_Free.txt  CS_valid_check.cpp  CS_valid_check.h  C_Subdivision.cpp  C_Subdivision.h  Disjoint_Set.h  GeometricStructure.py  Graph.h  Hyperbola.cpp  Hyperbola.h  Makefile  Plane_sweep.h  SPM.cpp  SPM.h  WC_region.cpp  WC_region.h  WF_propagation.cpp  WF_propagation.h  a.out  cmake_install.cmake  main.cpp  main_test.cpp  test.py  test.txt  test_sub
dnn/NearestNeighbor/ENN/C_Subidivision/DCEL/: AVLTree.h  DCEL.cpp  DCEL.h  DCEL_IO.cpp  DCEL_operation.cpp  DCEL_operation.h  Edge.cpp  Edge.h  Makefile  Point.cpp  Point.h  Point.md  Polygon.cpp  Polygon.h  PolygonalDomain.cpp  PolygonalDomain.h  Vector.cpp  Vector.h  Vector.md  input5.txt  lines_input4.ipe
dnn/NearestNeighbor/ENN/C_Subidivision/DCEL/examples/: input1.txt  input4.txt  lines_input1.ipe  lines_input2.ipe
dnn/NearestNeighbor/ENN/C_Subidivision/Delaunay_Linf/: CMakeCache.txt  CMakeLists.txt  Makefile  Point.cpp  Point.h  cmake_install.cmake  delaunay  delaunay.cpp  delaunay.h  main.cpp  readme.md
dnn/NearestNeighbor/ENN/C_Subidivision/Delaunay_Linf/making_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  libquadedge.dylib
dnn/NearestNeighbor/ENN/C_Subidivision/PBST/: PBST.h
dnn/NearestNeighbor/ENN/C_Subidivision/PointLocation/: Location.cpp  Location.h  Makefile
dnn/NearestNeighbor/ENN/C_Subidivision/Testcode/: Makefile
dnn/NearestNeighbor/ENN/C_Subidivision/Testcode/Gen_geom_data/: Gen_geom_data.cpp  Gen_geom_data.h  main.cpp
dnn/NearestNeighbor/ENN/C_Subidivision/Testcode/Gen_geom_data/Gen_geom_data/: Gen_geom_data.sln  Gen_geom_data.vcxproj  Gen_geom_data.vcxproj.filters  input.txt  t1.txt  t11.txt  t12.txt  t4.txt  t5.txt  t7.txt
dnn/NearestNeighbor/ENN/C_Subidivision/Testcode/Gen_geom_data/Gen_geom_data/Gen_geom_data/x64/Debug/: Gen_geom_data.exe.recipe  gen_geom_data.obj.enc  vc143.idb
dnn/NearestNeighbor/ENN/C_Subidivision/Testcode/Gen_geom_data/Gen_geom_data/Gen_geom_data/x64/Debug/Gen_geom_data.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Gen_geom_data.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
dnn/NearestNeighbor/ENN/C_Subidivision/Testcode/test_L_infty_CP/: Makefile  main.cpp  test_L_infty_CP.cpp  test_L_infty_CP.h
dnn/NearestNeighbor/ENN/C_Subidivision/Testcode/test_L_infty_CP/testcase/: t10.txt  t11.txt  t2.txt  t3.txt  t4.txt  t5.txt  t6.txt  t7.txt  t8.txt  t9.txt
dnn/NearestNeighbor/ENN/C_Subidivision/Testcode/test_L_infty_DT/: Makefile  main.cpp  test_L_infty_DT.cpp  test_L_infty_DT.h
dnn/NearestNeighbor/ENN/C_Subidivision/Testcode/test_csdiv_pts/: CS_valid_check.cpp  CS_valid_check.h  GeometricStructure.py  Makefile  test.py  test.txt  test3.txt  test4.txt  test5.txt  test6.txt  test_csdiv_pts.cpp  test_csdiv_pts.h
dnn/NearestNeighbor/ENN/C_Subidivision/Testcode/test_csdiv_pts/testcase/: t3.txt  t6.txt
dnn/NearestNeighbor/ENN/C_Subidivision/Testcode/test_point_location/: test_point_location.h
dnn/NearestNeighbor/ENN/C_Subidivision/testcase/csdiv_pts/: t1.txt  t5.txt
dnn/NearestNeighbor/ENN/C_Subidivision/testcode/: CS_valid_check.cpp  GeometricStructure.py
dnn/NearestNeighbor/ENN/C_Subidivision/testcode/testcase/csdiv_pts/: t2.txt  t4.txt
dnn/PDDNN/: PDDNN.h  PDDNN.vcxproj
dnn/Release/: HNN.iobj  HNN.ipdb  L1NNS.iobj  L1NNS.ipdb
dnn/aligning/: 2d_aligning.py  3d_aligning.py
dnn/includes/: AVLTree.h  CarrierGraph.h  DCEL.h  DCEL_operation.h  PDgraph.h  RBTree.h  Rect.h  SPSP.h  SVP.h  SegL1Voronoi.h  SegmentTree.h  SimpleBBST.h  Triangulation.h  Vector.h  compressed_quadtree.h
dnn/spath_spolygon/: Chain.h  DataT.h  DebugPrint.h  Edge.h  Hourglass.h  Point.h  PointS.h  SNode.h  hourglass_operation.h  main.cpp  polygon_decomposition.h  polygon_operation.h  tangent.h
dnn_py/: README  __init__.py
(+2689 files in other folders)
